K8S-Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollamaverse-ingress
  namespace: aiops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0a77b8e02b816936d, subnet-053235b7d23c6c5b9, subnet-0977be60708f90d99
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:976193257685:certificate/044c0d59-3c44-4893-8957-ef084947b4da
spec:
  ingressClassName: alb
  rules:

    # ------------------------------
    # FRONTEND + LOADTEST VIEWER
    # ------------------------------
    - host: aiops.asifahmadkhan.com
      http:
        paths:
          # Frontend App
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollamaverse-frontend-service
                port:
                  number: 80

          # Loadtest Viewer (reports)
          - path: /load-test
            pathType: Prefix
            backend:
              service:
                name: loadtest-viewer
                port:
                  number: 80

          # MongoDB viewer
          - path: /db-data
            pathType: Prefix
            backend:
              service:
                name: loadtest-viewer
                port:
                  number: 80

          # Redis viewer
          - path: /redis-data
            pathType: Prefix
            backend:
              service:
                name: loadtest-viewer
                port:
                  number: 80

    # ------------------------------
    # BACKEND (Node.js API)
    # ------------------------------
    - host: api.asifahmadkhan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollamaverse-backend-service
                port:
                  number: 8080

    # ------------------------------
    # Python Ollama Service
    # ------------------------------
    - host: ollama.asifahmadkhan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollamaverse-py-service
                port:
                  number: 8000

    # ------------------------------
    # Token API
    # ------------------------------
    - host: tokenapi.asifahmadkhan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollamaverse-tokenapi-service
                port:
                  number: 9000
